* 1620318967
 - cdnboxd: aliases CSS and logs fixes.
* 1620166168
 - add target in console aliases.
 - fix aliases propagation problem.
 - move alias manager in console (popup).
* 1619907148
 - introduce aliases.
* 1619305431
 - introduce derivative for appli stats in console.
* 1619200646
 - adds aapli to DNS logs.
* 1619175974
 - console fixes.
* 1619127879
 - moving appli statistic into console.
* 1619026541
 - introducing appli statistic console.
* 1618136439
 - change console to stream to avoid synchronous write.
* 1617641084
 - adding logjsonobject flag to add {, } and timestamp to log. Now directly usable by filebeat.
* 1617625070
 - remove memory metric from log as it's now present in /cdn/status.
 - add memory RSS consumption in console. 
* 1615057381
 - fix potential startup race condition problem
* 1614767112
 - Fix tlsticket problem.
* 1614512040
 - upgrade to maxmind 4.3.1
 - Geolocation is now optional. Desactivated if Geo DB is absent. Perf an tcprtt needs geolocation.
* 1614502764
 - penal becomes obsolete as it become useless. No more penalbucket calculation. /cdn/penalite return cdnbox's penal value for compatibility. It will be removed by march 2022.
 - add details on uncaugth error.
 - score calculation refactoring.
* 1612124170
 - change varnish metrics format.
 - add dontderive field to varnishmetrics.
* 1611479197
 - change target's cdnboxd.service to wait for nss resolution.
* 1608033183
 - refactoring varnishmetrics
 - fix RangeError in cdnboxPacket.js:84:26
* 1607776777
 - discard DNS packet with remote port 0
* 1604744266
 - Optimize crypto tlsticket
* 1604017875
 - Introducing cdnboxMetrics.js. Optimize crypto/eventloop
* 1603982384
 - Change timeout eventloop metric from 0 to 5 to save CPU.
* 1603955952
 - Adds eventloop and mem to /cdn/status
* 1603060693
 - adding varnishmetrics to /cdn/status. Change to varnishstat format 6.5.
* 1603060693
 - adding /cdn/status entry point.
* 1602441772
 - adding timout parameter on localtest.