@@ -356,44 +356,37 @@ function getnslist(country) {
         head++;
         headcont++;
         pos = Math.max(Math.floor(Math.random()*head*cdnbox.nspriorityratio, head - 1));
-//        nslist.splice(pos, 0,cdnbox.hostname);
         nslist.splice(pos, 0, i);
         nsgrp.splice(pos, 0,cdnbox.nsgroup);
       } else if (country !== null && country.continent && cdnbox.continents !== undefined &&
           cdnbox.continents.indexOf(country.continent.code) != -1) {
         headcont++;
         pos = Math.max(Math.floor(Math.random()*(headcont - head)), headcont - head - 1) + head;
-//        nslist.splice(pos, 0,cdnbox.hostname);
         nslist.splice(pos, 0, i);
         nsgrp.splice(pos, 0,cdnbox.nsgroup);
       } else {
         pos = Math.floor(Math.random()*(nslist.length - headcont + 1)) + headcont;
-//        nslist.splice(pos, 0,cdnbox.hostname);
         nslist.splice(pos, 0, i);
         nsgrp.splice(pos, 0,cdnbox.nsgroup);
       }
     }
     if (country !== null && country.country && cdnboxStates.local.config.countries !== undefined &&
         cdnboxStates.local.config.countries.indexOf(country.country.iso_code) != -1) {
-//      nslist.splice(0,0,cdnboxStates.local.config.hostname);
       nslist.splice(0,0,memolocal);
       nsgrp.splice(0,0,cdnboxStates.local.config.nsgroup);
     } else if (country !== null && country.continent && cdnboxStates.local.config.continents !== undefined &&
         cdnboxStates.local.config.continents.indexOf(country.continent.code) != -1) {
-//      nslist.splice(head,0,cdnboxStates.local.config.hostname);
       nslist.splice(head,0,memolocal);
       nsgrp.splice(head,0,cdnboxStates.local.config.nsgroup);
     } else {
       pos = Math.floor(Math.random()*(nslist.length - headcont + 1)) + headcont;
-//      nslist.splice(pos,0,cdnboxStates.local.config.hostname);
       nslist.splice(pos,0,memolocal);
       nsgrp.splice(pos,0,cdnboxStates.local.config.nsgroup);
     }
     while (nslist.length > cdnboxStates.config.dnsserver.nsnum &&
-           nsgrp[1] !== undefined && nsgrp[0] == nsgrp[1] &&
-           nsgrp[2] !== undefined && nsgrp[0] == nsgrp[2]) {
-      nslist.splice(2,1);
-      nsgrp.splice(2,1);
+           nsgrp[1] !== undefined && nsgrp[0] == nsgrp[1]) {
+      nslist.splice(1,1);
+      nsgrp.splice(1,1);
     }
     return nslist;
 }
