@@ -666,14 +666,18 @@ function aliasmanager(res) {
     </script>
     </head>
     <body>
+      <div style="position:absolute; top:10px; right:10px;">
+        <input type="button" value="&times;" onclick="aliasmanagerclose();">
+      </div>
       <h1>Alias manager</h1>
       <form>
-      <div>
+      <div id="aliasmenu" style="position:relative;">
+        <div style="position:absolute; top:0px; right:5px;">
+	  <input type="button" id="update" value="Publish" onclick="updatealiases();">
+	</div>
         <span>Release: </span><span id="release">` + cdnboxStates.alias.release + `</span>
         <label for="ttl">TTL:</label><input type="text" size="5" id="ttl" value="` + cdnboxStates.alias.ttl + `">
-        <input type="button" value="Reload" onclick="window.location = 'aliasmanager';">
-        <input type="button" value="Close" onclick="aliasmanagerclose();">
-        <span id="updatespan"><input type="button" id="update" value="Publish" onclick="updatealiases();"></span>
+        <span id="reload"><input type="button" value="Reload" onclick="window.location = 'aliasmanager';"></span>
       </div>
       <br/>
       <div id="aliases">
@@ -692,7 +696,7 @@ function aliasmanager(res) {
     res.write(`
       </select></div>
       <div class="countcol">` +
-	(cdnboxStates.aliasstats[alias] !== undefined?cdnboxStates.aliasstats[alias].count:'0') +
+	(cdnboxStates.aliasstats[alias] !== undefined?rnum(cdnboxStates.aliasstats[alias].count):'0') +
       `</div>
       <div class="deletecol"><input type="button" value="Delete" onclick="aliasdel(this);"></div>
       </div>
@@ -704,6 +708,12 @@ function aliasmanager(res) {
       </form>
     </body></html>
   `);
+}
+
+function rnum(num) {
+  if (num > 10000000) return Math.round(num/1000000) + 'M';
+  if (num > 10000) return Math.round(num/1000) + 'K';
+  return(num);
 }
 
 function buildtoken(req) {
